# rock-paper-scissors-rust

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
admin-client/: index.html  main.js
client/: index.html
game-client-example/: game.js  index.html  username-genrator.js
src/: app_state.rs  config-dev.toml  config.toml  enum_types.rs  error_enums.rs  game_creator.rs  game_entry.rs  game_event_broadcast.rs  gameplay_manager.rs  main.rs  player_action.rs  server_settings.rs
src/admin_handlers/: admin_status.rs  gameplay_info.rs  mod.rs  shutdown.rs
src/extractors/: admin_auth_token.rs  mod.rs
src/handlers/: create.rs  game_action.rs  game_events.rs  game_status.rs  join.rs  mod.rs
