[package]
name = "rps-online"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
actix-web-static-files = "4.0.1"
config = "0.13.4"
serde = { version = "1.0", features = ["derive"] }
static-files = "0.2.3"

[build-dependencies]
static-files = "0.2.3"
