[package]
name = "rps-online"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
actix-web-static-files = "4.0.1"
chrono = "0.4.31"
config = "0.13.4"
jsonwebtoken = "9.2.0"
serde = { version = "1.0", features = ["derive"] }
sha256 = "1.4.0"
static-files = "0.2.3"

[build-dependencies]
static-files = "0.2.3"
